fix:样式fieSet、image、collapse (#2856)

--- a/scss/components/_collapse.scss
+++ b/scss/components/_collapse.scss
@@ -39,6 +39,10 @@
     }
   }
 
+  &-TplField {
+    display: inline-block;
+  }
+
   &.is-collapsed &-arrow:before {
     transform: rotate(45deg);
     transform-origin: 0% 50%;
