--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -21,6 +21,7 @@
 
   &-thumbWrap {
     position: relative;
+    height: 100%;
   }
 
   &-image {
